[package]
name = "fxoanda"
version = "0.1.0"
authors = ["James McGill <jbmcgill@gmail.com>"]

[dependencies]
reqwest = "0.9.5"
serde_json = "1.0"
serde = "1.0.83"
serde_derive = "1.0.83"
chrono = {version = "0.4.6", features = ["serde"] }
time = "*"
fxoanda_definitions = {path = "fxoanda_definitions/"}
fxoanda_serdes = {path = "fxoanda_serdes/"}


