[package]
name = "fxoanda_definitions"
version = "0.1.0"
authors = ["James McGill <jbmcgill@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = "1.0.83"
serde_derive = "1.0.83"
chrono = {version = "0.4.6", features = ["serde"] }
time = "*"
fxoanda_serdes = { path = "../fxoanda_serdes/" }
